objects/ILC_Stage_Milestone_Adjustment__c.object
<CustomObject>
    <fields>
        <fullName>Adjustment_Period__c</fullName>
        <label>Adjustment Period Month Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_ValueAmount__c</fullName>
        <label>Adjustment Value/Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ILC_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ILC Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ILC_Stage_Milestone_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MileStone__c</fullName>
        <label>MileStone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WatsonOpportunity</fullName>
                </value>
                <value>
                    <fullName>Appointment</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary_Stage__c</fullName>
        <label>Summary Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.Identify</fullName>
                </value>
                <value>
                    <fullName>2.Qualify</fullName>
                </value>
                <value>
                    <fullName>3.Introduce</fullName>
                </value>
                <value>
                    <fullName>4.Discovery Workshop</fullName>
                </value>
                <value>
                    <fullName>5.Present</fullName>
                </value>
                <value>
                    <fullName>6.Due Diligence</fullName>
                </value>
                <value>
                    <fullName>7.Negotiate</fullName>
                </value>
                <value>
                    <fullName>8.Finalize &amp; Implement</fullName>
                </value>
                <value>
                    <fullName>9.Support</fullName>
                </value>
                <value>
                    <fullName>10.End-of-Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Watson_Non_Watson__c</fullName>
        <label>Watson/Non-Watson</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Watson</fullName>
                </value>
                <value>
                    <fullName>Non-Watson</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ILC Stage Milestone Adjustment</label>
    <nameField>
        <displayFormat>ILC Adjustment - {0000}</displayFormat>
        <label>ILC Stage Milestone Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ILC Stage Milestone Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>